exports[`Actions: App PARSE_SNIPPET creates an action to parse the snippet with a web worker 1`] = `
Object {
  "meta": Object {
    "WebWorker": true,
  },
  "payload": Object {
    "snippet": "Grasssss tastes bad",
  },
  "type": "PARSE_SNIPPET",
}
`;

exports[`Actions: App RESET_RULE_FILTERS matches snapshot 1`] = `
Object {
  "type": "RESET_RULE_FILTERS",
}
`;

exports[`Actions: App RESET_STATE matches snapshot 1`] = `
Object {
  "type": "RESET_STATE",
}
`;

exports[`Actions: App RESTORE_STATE creates an action that restores state 1`] = `
Object {
  "payload": Object {
    "AST": Object {
      "begin": 0,
      "children": Array [
        "NEWLINE",
        "INDENT",
        "NEWLINE",
        "DEDENT",
      ],
      "end": 1,
      "type": "file_input",
    },
    "annotations": Object {},
    "filters": Object {},
    "readOnly": false,
    "snippet": "	",
    "snippetTitle": "",
  },
  "type": "RESTORE_STATE",
}
`;

exports[`Actions: App SAVE_ANNOTATION creates an action that adds an annotation 1`] = `
Object {
  "payload": Object {
    "annotation": "You pass butter.",
    "lineNumber": 1,
    "lineText": "What is my purpose?",
  },
  "type": "SAVE_ANNOTATION",
}
`;

exports[`Actions: App SELECT_ALL_FILTERS matches snapshot 1`] = `
Object {
  "type": "SELECT_ALL_FILTERS",
}
`;

exports[`Actions: App SET_AST creates an action to set the abstract syntax tree 1`] = `
Object {
  "payload": Object {
    "begin": 0,
    "children": Array [
      "NEWLINE",
      "INDENT",
      "NEWLINE",
      "DEDENT",
    ],
    "end": 1,
    "type": "file_input",
  },
  "type": "SET_AST",
}
`;

exports[`Actions: App SET_RULE_FILTERS creates an action to set the rule filters 1`] = `
Object {
  "payload": Object {
    "atom": Object {
      "count": 21,
      "prettyTokenName": "Atoms",
      "selected": true,
    },
    "for_stmt": Object {
      "count": 1,
      "prettyTokenName": "For Loops",
      "selected": false,
    },
  },
  "type": "SET_RULE_FILTERS",
}
`;

exports[`Actions: App SET_SNIPPET_CONTENTS creates an action to set the snippet contents 1`] = `
Object {
  "payload": "Show me what you got",
  "type": "SET_SNIPPET_CONTENTS",
}
`;

exports[`Actions: App SET_SNIPPET_KEY creates correct action object 1`] = `
Object {
  "payload": "szechuan sauce",
  "type": "SET_SNIPPET_KEY",
}
`;

exports[`Actions: App SET_SNIPPET_LANGUAGE creates an action to set the snippet language 1`] = `
Object {
  "payload": "Gromflomite",
  "type": "SET_SNIPPET_LANGUAGE",
}
`;

exports[`Actions: App TOGGLE_EDITING_STATE creates an action that toggles the editing state 1`] = `
Object {
  "type": "TOGGLE_EDITING_STATE",
}
`;

exports[`Actions: App async actions deleteSnippet() dispatches the correct actions if the action fails 1`] = `
Array [
  Object {
    "payload": "Deleting...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "payload": "Failed to delete snippet; please try again",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "CLOSE_NOTIFICATION",
  },
]
`;

exports[`Actions: App async actions deleteSnippet() dispatches the correct actions if the action succeeded 1`] = `
Array [
  Object {
    "payload": "Deleting...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "CLOSE_NOTIFICATION",
  },
  Object {
    "payload": "Snippet Deleted!",
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`Actions: App async actions saveExisting() dispatches SAVE_FAILED if save failed 1`] = `
Array [
  Object {
    "payload": "Saving...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "payload": "Failed to save snippet; please try again",
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`Actions: App async actions saveExisting() dispatches SAVE_SUCCEEDED if saved 1`] = `
Array [
  Object {
    "payload": "Saving...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "CLOSE_NOTIFICATION",
  },
  Object {
    "payload": "Codesplaination Saved!",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "SAVE_SUCCEEDED",
  },
]
`;

exports[`Actions: App async actions saveNew() dispatches SAVE_FAILED if save failed 1`] = `
Array [
  Object {
    "payload": "Saving...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "payload": "Failed to save snippet; please try again",
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`Actions: App async actions saveNew() dispatches SAVE_SUCCEEDED if saved 1`] = `
Array [
  Object {
    "payload": "Saving...",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "CLOSE_NOTIFICATION",
  },
  Object {
    "payload": "Codesplaination Saved!",
    "type": "ADD_NOTIFICATION",
  },
  Object {
    "type": "SAVE_SUCCEEDED",
  },
]
`;
